# exittools

./: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
man/: Makefile.am  Makefile.in  exitstatus.1  killme.1  strerror.1
scripts/: Makefile  Makefile.am  Makefile.in  exitstatus  killme  strerror
